2011-03-25 Charles Suprin <hamaa1vs at gmail.com>

    * AUTHORS
    * src/about.c
    * src/Makefile.am
    * src/menubar.c
    * src/mod-cfg.c
    * src/gpredict-utils.c
    * src/gpredict-utils.h
    * src/gtk-rig-ctrl.c
    * src/gtk-rot-ctrl.c
    * src/gtk-sat-selector.c
    * src/gtk-single-sat.c
    * src/strnatcmp.c
    * src/strnatcmp.h
    Added "natural comparison" by Martin Pool from patch 3237220 by Patrick Strasser.

2011-03-24 Charles Suprin <hamaa1vs at gmail.com>

    * src/predict-tools.c
    Unify get_pass and get_pass_no_min_el to use common pass generator.


2011-03-22 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-sat-map.c
    Remove decayed satellites from map view.

2011-03-21 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-event-list-popup.c
    * src/gtk-polar-view-popup.c
    * src/gtk-sat-list-popup.c
    * src/gtk-sat-list.c
    * src/gtk-sat-map-ground-track.c
    * src/gtk-sat-map-popup.c
    * src/gtk-sat-module.c
    * src/gtk-single-sat.c
    * src/orbit-tools.c
    * src/predict-tools.c
    Include geo and decayed orbits in has_aos and make dynamic calls to
	decayed instead of static orbit type check.

2011-03-20 Charles Suprin <hamaa1vs at gmail.com>

    Merged gpsd_testing branch into trunk.

2011-03-20 Charles Suprin <hamaa1vs at gmail.com>

    * doc/man/gpredict.1.in
    Update Copyright to 2011

2011-03-13 Charles Suprin <hamaa1vs at gmail.com>

    * data/locations.dat
    Added more locations to locations.dat

    * configure.ac
    Changed version to 1.4svn

2011-03-12 Charles Suprin <hamaa1vs at gmail.com>

    * src/predict-tools.c
    Added check for slope of elevation in find_los.

2011-03-01 Alexandru Csete <oz9aec at gmail.com>

    * data/satdata:
    Updated satellite data.

    * po:
    Synchronised with translations from launchpad.net

    * configure.ac:
    Updated version number to 1.3.
    Include da.po


2011-02-28 Alexandru Csete <oz9aec at gmail.com>

    * src/tle-update.c: